2010-06-11 Holger Vogt
 * DEVICES: update 4.6.5
   /man/man1/ngnutmeg.1 ngspice.1: updated with link to actual
   ngspice documentation

2010-06-11 Holger Vogt
 * ngspice.txt: notice to users: help file outdated
 
2010-06-04 Holger Vogt
 * inpcom.c: bug report 3008000, overflow of fixed array of 
   used_subckt_names, used_model_names in fcn comment_out_unused_subckt_models
   removed by dynamic memory allocation 

2010-06-03 Holger Vogt
 * src\spicelib\devices\bsim3soi
   b4soi.c b4soiacld.c b4soiask.c b4soicheck.c b4soicvtest.c
   b4soidef.h b4soidel.c b4soidest.c b4soiext.h b4soigetic.c
   b4soiinit.c b4soiinit.h b4soiitf.h b4soild.c b4soimask.c
   b4soimdel.c b4soimpar.c b4soinoi.c b4soipar.c b4soipzld.c
   b4soiset.c b4soitemp.c b4soitrunc.c:
   update to BSIM4SOI vers. 4.3.1
 * misc/tilde.c: return path NULL added  

2010-05-30 Holger Vogt
 * xgraph/dialog.c: fcn getline renamed to getline_xgraph
 * Makefile.am, frontend/Makefile.am include/Makefile.am 
   spicelib/parser/Makefile.am, tests/bsim3soi/Makefile.am
   configure.in:
   updates to allow 'make dist'
 * com_hardcopy.c: allow filename without '.'
 * device.c, b4soiask.c, b4soiset.c, b4ask.c, b4v2ask.c,
   b4v3ask.c, b4v4ask.c, b4v5ask.c: add error handling and add
   questions for 'show all'

2010-05-27 Holger Vogt
 * inpcom.c: update B source pwl function handling

2010-05-26 Holger Vogt
 * xspice api update: cmcm_analog_alloc() and cm_event_alloc()
    ng-spice-rework/src/include/cmproto.h
 ng-spice-rework/src/include/dllitf.h
 ng-spice-rework/src/xspice/cm/cm.c
 ng-spice-rework/src/xspice/cm/cmevt.c
 ng-spice-rework/src/xspice/examples/nco/cfunc.mod
 .../src/xspice/examples/real_delay/cfunc.mod
 .../src/xspice/examples/real_to_v/cfunc.mod
 .../src/xspice/icm/analog/d_dt/cfunc.mod
 .../src/xspice/icm/analog/hyst/cfunc.mod
 .../src/xspice/icm/analog/int/cfunc.mod
 .../src/xspice/icm/analog/oneshot/cfunc.mod
 .../src/xspice/icm/analog/s_xfer/cfunc.mod
 .../src/xspice/icm/analog/sine/cfunc.mod