@@ -448,7 +448,7 @@
 #define NGSPICEBINDIR "C:/Spice/bin"
 
 /* Define the build date */
-#define NGSPICEBUILDDATE "Tue Sep 23 22:09:55 GMT 2008"
+#define NGSPICEBUILDDATE "Sat Jun 12 17:01:55 GMT 2010"
 
 /* Define the directory for architecture independent data files */
 #define NGSPICEDATADIR "C:/Spice/share/ngspice"
@@ -472,13 +472,13 @@
 #define PACKAGE_NAME "ngspice"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "ngspice 20"
+#define PACKAGE_STRING "ngspice 21"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "ngspice"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "20"
+#define PACKAGE_VERSION "21"
 
 /* Define if we want predictor algorithm */
 /* #undef PREDICTOR */
@@ -533,7 +533,7 @@
 /* #undef TM_IN_SYS_TIME */
 
 /* Version number of package */
-#define VERSION "20"
+#define VERSION "21"
 
 /* Define if we want spice2 sensitivity analysis */
 /* #undef WANT_SENSE2 */
